plugins/nightcolor: fix wrong changed property insert in DBus interface

BUG: 477482